--------------------------------------------

Version 0.4n
------------
* Bugfixing
* Added masturbation options for the PC
 - Cock. Written by LukaDoc. Patreon-sponsored
 - Breasts. Written by The Obserever
 - Pussy. Written by The Obserever
 - Ass. Written by The Obserever
* Some more scenes for cats
 - Win, get serviced. Requires cock. Written by LukaDoc. Patreon-sponsored
 - Loss, PC blows cocked cat. Written by LukaDoc. Patreon-sponsored
* Fixed a bug with the Green Scented Candle. It actually does something now
* Added a new Halloween scene, written by QB and LD, featuring a certain doberherm. Find it in the new room in the Mausoleum

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4m2
-------------
* Fixed a parser bug in spring description
* Fixed a bug in the new Lei scene where the PC would duplicate
* Fixed a bunch of bugs reported on the forums
* Added Lord Harthon to the Halloween event. Written by LD and QB. Find him in the Mausoleum (and later on the Path)
* You can no longer equip bottom armors after you've equipped a full armor (remove it first)

Version 0.4m
------------
* Fixed a bug in Halloween which would cause your party to duplicate
* Fixed a whole lot of bugged italics in Krawitz Q
* Fixed a bug where Terry would be named Thief [1] upon recruiting
* Belly size description, according to pregnancy
* Added proper pregnancies (sorta). There's a birth scene, written by The Observer, and a nursery in the camp you can visit (though there's not much to do there)
* Added a pregnancy potion (Gestarium)
 - Available through the usual item debug for now, plus some drop tables
 - It can also be bought from Asche
 - To be specific, what this does is push an already started pregnancy. It won't make you pregnant
* Added the items Anusol and Anusol+
 - Can currently be gotten through debug