@@ -15,6 +15,7 @@ Version 0.4n
  - Ass. Written by The Obserever
 * Some more scenes for cats
  - Win, get serviced. Requires cock. Written by LukaDoc. Patreon-sponsored
+ - Win, get vaginally fucked. Written by LukaDoc. Patreon-sponsored
  - Loss, PC blows cocked cat. Written by LukaDoc. Patreon-sponsored
 * Fixed a bug with the Green Scented Candle. It actually does something now
 * Added a new Halloween scene, written by QB and LD, featuring a certain doberherm. Find it in the new room in the Mausoleum
